dashboard-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: kubernetes-dashboard-ingress
spec:
 rules:
  - host: dashboard.192.168.99.100.nip.io
    http:
     paths:
      - path: /
        backend:
         serviceName: kubernetes-dashboard
         servicePort: 80
