dashboard-ingress_traefik_template.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubernetes-dashboard-ingress
spec:
  tls:
    - hosts:
      - dashboard.__IP__.nip.io
      secretName: wildcard-testing-selfsigned-tls-__IP__

  rules:
    - host: dashboard.__IP__.nip.io
      http:
        paths:
          - path: /
            backend:
              serviceName: kubernetes-dashboard
              servicePort: 80
