traefik_dashboard_template.yaml
# dashboard.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`traefik.__IP__.nip.io`) && (PathPrefix(`/dashboard`)
      kind: Rule
      services:
        - name: dashboard@internal
          kind: TraefikService
    - match: Host(`traefik.__IP__.nip.io`) && (PathPrefix(`/api`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
